Improve Javadoc example.